@@ -2,6 +2,10 @@ The current version of Ruby Reports is 0.4.15
 
 changes since 0.4.13
 
+- Alioth now has a powerful hook back into the engine from plugins via helpers
+
+- added action / attribute syntactic sugar for Alioth
+
 - added accessor style methods to DataRow via method_missing
 
 - added prune method for Table formmatting. 
